--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,3 +160,8 @@ a {
   line-height: 36px;
   font-size: 20px;
 }
+
+.footer-contacts-address-phone {
+  line-height: 40px;
+  font-size: 40px;
+}
