--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,12 +34,19 @@
 
 /* Common styles */
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "PT Sans", sans-serif;
   background-color: #ffffff;
+  flex-direction: column;
   line-height: 21px;
+  min-height: 100%;
   color: #000000;
   font-size: 18px;
+  display: flex;
   margin: 0;
 }
 
@@ -59,7 +66,33 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+}
+
+h3 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
 /* Pages styles */
+
+.main-container {
+  flex-grow: 1;
+}
 
 .page-container {
   width: 1200px;
@@ -79,6 +112,12 @@ a {
   background-position: bottom, top;
   text-align: center;
   height: 485px;
+}
+
+.greeting {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .greeting h2 {
@@ -145,7 +184,6 @@ a {
   line-height: 36px;
   font-weight: 700;
   color: #ffffff;
-  font-size: 30px;
   font-size: 30px;
 }
 
@@ -259,4 +297,28 @@ a {
   font-weight: 700;
   font-size: 20px;
   color: #ffffff;
+}
+
+.navigation {
+  height: 64px;
+  display: flex;
+}
+
+.navigation-list {
+  width: 339px;
+  display: flex;
+}
+
+.navigation-user {
+  max-width: 268px;
+  margin-left: auto;
+}
+
+.navigation-logo {
+  display: block;
+}
+
+.preview-sedona {
+  display: block;
+  margin: 0 auto;
 }
