--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,7 @@ body {
   font-weight: 700;
   color: #ffffff;
   font-size: 16px;
+  border: none;
 }
 
 a {
@@ -112,29 +113,42 @@ p {
   background-position: bottom, top;
   text-align: center;
   height: 485px;
-}
-
-.greeting {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-bottom: 69px;
 }
 
 .greeting h2 {
   line-height: 36px;
   font-weight: 700;
   font-size: 30px;
+  margin-bottom: 25px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .greeting p {
   line-height: 26px;
   font-size: 22px;
   color: #333333;
+  text-align: center;
+}
+
+.greeting {
+  margin-bottom: 69px;
+}
+
+.greeting-2 {
+  margin-bottom: 64px;
+}
+
+.greeting-2 h2 {
+  margin-bottom: 20px;
 }
 
 .blog-article {
   background-color: #82B3D3;
   color: #ffffff;
+  display: flex;
+  justify-content: space-between;
 }
 
 .blog-article h3 {
@@ -147,37 +161,47 @@ p {
   line-height: 28px;
   font-weight: 700;
   font-size: 24px;
+  margin-bottom: 62px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .advantages-item p {
   color: #333333;
+  text-align: center;
 }
 
 .suggestion h2 {
   line-height: 36px;
   font-weight: 700;
   font-size: 30px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
 }
 
 .suggestion p {
   line-height: 26px;
   font-size: 22px;
   color: #333333;
+  margin-bottom: 54px;
 }
 
 .advantages-item {
-  background: rgba(131, 179, 211, 0.12)
+  background: rgba(131, 179, 211, 0.12);
+  width: 400px;
+  padding: 112.5px 85px;
 }
 
 .advantages-item-background {
-  background: rgba(131, 179, 211, 0.2)
+  background: rgba(131, 179, 211, 0.2);
 }
 
 .newsletter {
   background-image: url("../images/blur-background-footer.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
+  text-align: center;
+  padding: 96px 0 104px;
 }
 
 .newsletter h2 {
@@ -185,6 +209,8 @@ p {
   font-weight: 700;
   color: #ffffff;
   font-size: 30px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 .registration {
@@ -196,6 +222,7 @@ p {
   line-height: 26px;
   color: #ffffff;
   font-size: 22px;
+  margin-bottom: 54px;
 }
 
 .newsletter-button {
@@ -203,6 +230,7 @@ p {
   background-color: #82B3D3;
   line-height: 36px;
   font-size: 20px;
+  padding: 8px 50px;
 }
 
 .footer-contacts-address-phone {
@@ -321,4 +349,99 @@ p {
 .preview-sedona {
   display: block;
   margin: 0 auto;
+}
+
+.blog-article-description {
+  display: flex;
+  flex-direction: column;
+  padding: 102px 85px;
+  width: 400px;
+}
+
+.blog-article-description h3 {
+  display: block;
+  margin-bottom: 62px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.blog-article-description p {
+  display: block;
+  text-align: center;
+}
+
+.advantages {
+  display: flex;
+}
+
+.blog-article-2 {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-bottom: 64px;
+}
+
+.advantages-item-icons {
+  background: rgba(131, 179, 211, 0.12);
+  width: 400px;
+  padding: 81px 85px;
+}
+
+.advantages-item-icons h3 {
+  line-height: 28px;
+  font-weight: 700;
+  font-size: 24px;
+  margin-bottom: 30px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.advantages-item-icons p {
+  color: #333333;
+  text-align: center;
+}
+
+.advantages-description-wrapper {
+  height: 223px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.advantage-icon-habitation {
+  background-image: url("../images/icons/advantage-icon-1.svg");
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+
+.advantage-icon-food {
+  background-image: url("../images/icons/advantage-icon-2.svg");
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+
+.advantage-icon-present {
+  background-image: url("../images/icons/advantage-icon-3.svg");
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+
+.suggestion {
+  padding: 96px 0px;
+  text-align: center;
+}
+
+.registration {
+  padding: 8px 50px;
+}
+
+/*потом вопрос по стилизации инпута*/
+.newsletter-text {
+  background-color: #F2F2F2;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 24px;
+  width: 452px;
+  height: 22px;
+  border: none;
+  padding: 14px 20px;
 }
