--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,10 +55,7 @@ body {
   background-color: #756157;
   text-transform: uppercase;
   text-align: center;
-  line-height: 20px;
   font-weight: 700;
-  color: #ffffff;
-  font-size: 16px;
   border: none;
 }
 
@@ -117,6 +114,14 @@ p {
   line-height: 24px;
   font-weight: 700;
   font-size: 20px;
+}
+
+.navigation-item {
+  padding: 20px 16px;
+}
+
+.logo {
+  margin-right: 30px;
 }
 
 .preview-background {
@@ -349,8 +354,8 @@ p {
 }
 
 .navigation-list {
-  width: 339px;
   display: flex;
+  align-items: center;
 }
 
 .navigation-user {
@@ -475,6 +480,10 @@ p {
 
 .booking {
   padding: 8px 34px;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
 }
 
 /* Section filter-content */
