--- a/styles/styles.css
+++ b/styles/styles.css
@@ -283,7 +283,7 @@ p {
   font-size: 60px;
   margin-bottom: 8px;
 }
-
+*
 .breadcrumbs li {
   line-height: 21px;
   font-size: 16px;
@@ -314,8 +314,29 @@ p {
   font-size: 24px;
 }
 
-.product-card-description-wrapper b {
+.product-card-image {
+  display: block;
+}
+
+/*потом разобраться почему разница в 2 пикселя от высоты в макете*/
+
+.product-card-link-image {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.product-card-link {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.stars-count {
+  display: flex;
+}
+
+.product-item b {
   font-weight: 400;
+  text-align: right;
 }
 
 .description-card-button {
@@ -326,16 +347,23 @@ p {
   font-weight: 700;
   font-size: 16px;
   color: #ffffff;
+  padding: 8px 26px;
 }
 
 .to-favorites-button {
   background-color: #82B3D3;
+  padding: 8px 20px;
 }
 
 .rating {
+  background-color: #F2F2F2;
   line-height: 20px;
   font-size: 16px;
   color: #333333;
+  text-transform: uppercase;
+  text-align: center;
+  border-radius: 4px;
+  padding: 9px 22px 8px 22px;
 }
 
 .switch-button {
@@ -553,6 +581,11 @@ fieldset {
 .product-item {
   padding: 20px;
   border: 1px solid #E6E6E6;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 16px;
+  width: 300px;
 }
 
 .product-cards {
