--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,7 @@ html {
 
 body {
   font-family: "PT Sans", sans-serif;
-  background-color: #ffffff;
+  background-color: #F2F2F2;
   flex-direction: column;
   line-height: 21px;
   min-height: 100%;
@@ -110,6 +110,8 @@ p {
 .page-container {
   width: 1200px;
   margin: 0 auto;
+  background-color: #ffffff;
+  box-shadow: 0px  0px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 .navigation-link {
