--- a/styles/styles.css
+++ b/styles/styles.css
@@ -764,3 +764,55 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 25%;
   pointer-events: auto;
 }
+
+.navigation-link-current{
+  text-decoration: underline;
+  text-decoration-color: #756257;
+  text-underline-offset: 19px;
+  text-decoration-thickness: 2px;
+  text-underline-position: under;
+}
+
+.search-icon-nav {
+  display: block;
+  height: 20px;
+  width: 20px;
+  background: url("../images/icons/search.svg");
+  background-repeat: no-repeat;
+}
+
+.card-icon-nav {
+  position: relative;
+  display: block;
+  height: 20px;
+  width: 20px;
+  background: url("../images/icons/card.svg");
+  background-repeat: no-repeat;
+}
+
+.navigation-user li:first-child,
+.navigation-user li:nth-child(2) {
+  padding: 22px 12px;
+}
+
+.navigation-user li:nth-child(2) {
+  margin-right: 20px;
+}
+
+.card-counts {
+  position: absolute;
+  top: -11px;
+  right: -8px;
+  height: 10px;
+  padding: 5px 5px 5px 4px;
+  width: 11px;
+  border-radius: 50%;
+  background-color: #7DB54F;
+  display: flex;
+}
+
+.test {
+  font-size: 10px;
+  line-height: 10px;
+  color: #ffffff;
+}
