--- a/styles/styles.css
+++ b/styles/styles.css
@@ -183,6 +183,20 @@ p {
   margin-bottom: 62px;
   text-align: center;
   text-transform: uppercase;
+  position: relative;
+  padding-bottom: 32px;
+  margin-bottom: 30px;
+}
+
+.advantages-item h3:before {
+  content: "";
+  position: absolute;
+  width: 60px;
+  height: 2px;
+  bottom: 0;
+  left: 85px;
+  right: 85px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 .advantages-item p {
