--- a/styles/styles.css
+++ b/styles/styles.css
@@ -424,10 +424,7 @@ legend {
 .navigation-list {
   display: flex;
   align-items: center;
-}
-
-.navigation-user {
-  margin-left: auto;
+  margin-right: auto;
 }
 
 .navigation-logo {
@@ -818,6 +815,7 @@ input[type="range"]::-moz-range-thumb {
   background: url("../images/icons/search.svg");
   background-repeat: no-repeat;
   background-position: bottom 0.5px right 0.5px;
+  margin-right: 24px;
 }
 
 .card-icon-nav {
@@ -827,6 +825,7 @@ input[type="range"]::-moz-range-thumb {
   width: 20px;
   background: url("../images/icons/card.svg");
   background-repeat: no-repeat;
+  margin-right: 24px;
 }
 
 .navigation-user li:first-child,
