Добавляет стилизацию селекту в каталоге

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -294,16 +294,26 @@ legend {
   margin-bottom: 50px;
 }
 
+.filter-selection-wrapper {
+  display: flex;
+  width: 292px;
+  align-items: center;
+  margin-right: 70px;
+}
+
 .filter-selection {
   font-family: "PT Sans", sans-serif;
   line-height: 21px;
   font-size: 18px;
   color: #333333;
   border: 2px solid #E5E5E5;
-  width: 292px;
-  padding: 10px 18px; /*10px тест вариация все из за тех же бордеров в хроме */
-  margin-right: 70px;
-  height: 49px;
+  padding: 12px 18px; /*12px тест вариация все из за тех же бордеров в хроме */
+  padding-right: 52px;
+  flex-grow: 1;
+  background-image: url("../images/icons/filter-down-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  appearance: none;
 }
 
 .filter-content h1 {
