--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,7 +119,7 @@ legend {
   width: 1200px;
   margin: 0 auto;
   background-color: #ffffff;
-  box-shadow: 0px  0px 20px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px  0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 .navigation-link {
@@ -287,9 +287,8 @@ legend {
 
 .filter-content {
   background-image: url(../images/blur-catalog-header.jpg);
-  min-height: 412px;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   color: #ffffff;
   margin-bottom: 50px;
 }
